preparo to create release